# process-manager

./: $  .gitignore  CMakeLists.txt  Makefile  a.out  procmanager  readme.md  taskmanager
include/: display.h  file_reader.h  format.h  is_numeric.h  process.h  system_monitor.h
src/: main.cpp  process.cpp
src/core/: display.cpp  file_reader.cpp  process.cpp  system_monitor.cpp
src/utils/: format.cpp  is_numeric.cpp
